# clipnet

./: .gitignore  LICENSE  README.md  batch_dfim.sh  calculate_dataset_params.py  calculate_deepshap.py  calculate_dfim.py  calculate_ism_shuffle.py  calculate_performance_metrics.py  cgen.py  clipnet.py  clipnet_basic_tutorial.ipynb  custom_loss.py  fit_nn.py  get_activation_maps.py  get_filter_gc_content.py  get_tss.py  get_tss_pwm.py  model_summary.txt  predict_ensemble.py  predict_individual_model.py  pyproject.toml  requirements.txt  requirements_cpu.txt  rnn_v10.py  rnn_v10_2k.py  rnn_v10_exp.py  rnn_v11.py  rnn_v12.py  scripts.txt  setup.py  shap_requirements.txt  tf_requirements.txt  time_history.py  utils.py
.github/workflows/: publish.yml
clipnet/: __init__.py  _calculate_activator_interaction.py  _calculate_dataset_params.py  _calculate_dfim.py  _calculate_ism_shuffle.py  _calculate_performance_metrics.py  _fit_nn.py  _get_activation_maps.py  _get_filter_gc_content.py  _get_tss.py  _get_tss_pwm.py  _rnn_v10_2k.py  _rnn_v10_exp.py  _rnn_v11.py  attribute.py  calculate_deepshap.py  calculate_ism_shuffle.py  calculate_performance_metrics.py  cgen.py  cli.py  clipnet.py  custom_loss.py  epistasis.py  fit_nn.py  get_activation_maps.py  get_tss.py  ism_shuffle.py  predict_ensemble.py  predict_individual_model.py  rnn_v10.py  shuffle.py  utils.py  visualize.py
data/: data_fold_assignments.csv  irf4_prom.fa  test.fa  test_deepshap_profile_PRECOMPUTED.npz  test_deepshap_quantity_PRECOMPUTED.npz  test_ism_PRECOMPUTED.npz  test_onehot_PRECOMPUTED.npz  test_predictions_PRECOMPUTED.h5
ensemble_models/: download_url.txt
src/: cgen.py  clipnet.py  dataset_params.json  rnn_v9.py  time_history.py  utils.py
