[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "clipnet"
version = "0.2.3"
description = "CLIPNET is an ensembled convolutional neural network for predicting transcription initiation from DNA sequence at single nucleotide resolution."
readme = "README.md"
authors = [{ name = "Adam He", email = "adamyhe@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
dependencies = [
    "gputil",
    "h5py",
    "joblib>=1.3",
    "matplotlib",
    "numpy>=1.26.3, <2.0.0",
    "pandas",
    "pyfastx>=1.1",
    "scipy",
    "seqlogo",
    "shap==0.44.1",
    "tensorflow[and-cuda]>=2.14.0, <2.15.0",
    "silence_tensorflow",
    "tqdm>=4.64.1",
]
keywords = [
  "bioinformatics",
  "genomics",
  "transcription initiation",
  "convolutional neural network",
  "sequence-to-function",
  "pro-cap"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/danko-lab/clipnet"
Repository = "https://github.com/danko-lab/clipnet"
Issues = "https://github.com/danko-lab/clipnet/issues"

[tool.setuptools]
packages = ["clipnet"]

[project.scripts]
clipnet = "clipnet.cli:cli"

[tool.setuptools.package-data]
clipnet = ["data/data_fold_assignments.csv", "data/test.fa"]
